[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/Textures/Entities/Enemies/blocker.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Entities/Enemies/Blocker.gd" type="Script" id=2]
[ext_resource path="res://Resources/Audio/FX/EnemyDamage.wav" type="AudioStream" id=3]
[ext_resource path="res://Scenes/MainScenes/Audio.gd" type="Script" id=4]

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( -0.5, -40, 11.5, -28.5, 28, -28, 28.5, -11.5, 40, -0.5, 28.5, 10, 28.5, 27, 11.5, 27, -0.5, 39.5, -12.5, 27.5, -28, 27, -28.5, 12, -40, -0.5, -28, -13, -28, -28, -12.5, -28 )

[node name="Blocker" type="KinematicBody2D"]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 2, 2 )
collision_layer = 2
collision_mask = 91
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 26, -28, 27, -12, 37, -1, 26, 10, 27, 25, 13, 25, 0, 36, -11, 25, -26, 25, -25, 13, -37, -1, -27, -10, -26, -26, -12, -26, 0, -37, 10, -26 )

[node name="PointCheckTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.07
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 1 )

[node name="DamageAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
script = ExtResource( 4 )

[connection signal="timeout" from="PointCheckTimer" to="." method="_on_PointCheckTimer_timeout"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
